removed tab indexes, changed semantic, updated sr-only texts

--- a/sources/css/sbplus_fonts.scss
+++ b/sources/css/sbplus_fonts.scss
@@ -32,10 +32,12 @@
     content: "\e363";
 }
 
+/*
 .playBtn:before {
     @extend .defaultFontSettings;
     content: "\e385";
 }
+*/
 
 #leftBtn:before {
     @extend .defaultFontSettings;
