--- a/sources/css/storybookplus.css
+++ b/sources/css/storybookplus.css
@@ -22,7 +22,7 @@
   src: url("../fonts/sbplus.eot?#iefix-918svh") format("embedded-opentype"), url("../fonts/sbplus.woff?-918svh") format("woff"), url("../fonts/sbplus.ttf?-918svh") format("truetype"), url("../fonts/sbplus.svg?-918svh#sbplus") format("svg");
   font-weight: normal;
   font-style: normal; }
-.defaultFontSettings, .infoIcn:before, .playBtn:before, #leftBtn:before, #rightBtn:before, .icon-notification:before, .icon-checkmark:before, .icon-assessement:before, .icon-arrow-down:before, .icon-expand:before, .icon-contract:before, .notes:before, .toc:before {
+.defaultFontSettings, .infoIcn:before, #leftBtn:before, #rightBtn:before, .icon-notification:before, .icon-checkmark:before, .icon-assessement:before, .icon-arrow-down:before, .icon-expand:before, .icon-contract:before, .notes:before, .toc:before {
   font-family: 'sbplus';
   speak: none;
   font-style: normal;
@@ -42,9 +42,12 @@
 .infoIcn:before {
   content: "\e363"; }
 
+/*
 .playBtn:before {
-  content: "\e385"; }
-
+    @extend .defaultFontSettings;
+    content: "\e385";
+}
+*/
 #leftBtn:before {
   content: "\e3b3"; }
 
@@ -93,6 +96,7 @@ p {
 
 .sr-only {
   position: absolute;
+  visibility: hidden;
   left: -10000px;
   top: auto;
   width: 1px;
@@ -227,31 +231,18 @@ p {
   #splash_screen a.playBtn, #splash_screen a.playBtn:visited, #splash_screen a.playBtn:hover {
     position: relative;
     display: block;
-    width: 1.78571rem;
+    width: 5.71429rem;
     font-size: 1.85714rem;
     line-height: 1.85714rem;
     color: #fff;
     text-align: center;
     text-decoration: none;
     margin: 0 auto;
-    padding: 0.71429rem 2.85714rem 0.35714rem;
+    padding: 0.71429rem;
     background-color: #006DCC;
     -moz-border-radius: 0.21429rem;
     -webkit-border-radius: 0.21429rem;
     border-radius: 0.21429rem; }
-  #splash_screen .playBtn:focus .sr-only {
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    padding: 0.42857rem 0.71429rem 0;
-    background-color: inherit;
-    -moz-border-radius: 0.21429rem;
-    -webkit-border-radius: 0.21429rem;
-    border-radius: 0.21429rem;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box; }
 
 #player {
   display: none;
@@ -282,20 +273,7 @@ p {
       text-align: right; }
     #player header .infoIcn {
       position: relative;
-      display: inline-block;
-      /*
-              	@include opacity( .75 );
-              	@include single-transition( opacity, ease-out, .3s );
-      */ }
-    #player header .infoIcn:focus .sr-only {
-      font-size: 0.71429rem;
-      top: -0.21429rem;
-      left: 0;
-      width: 30px;
-      height: auto;
-      line-height: normal;
-      z-index: 10;
-      background-color: black; }
+      display: inline-block; }
     #player header a, #player header a:visited, #player header a:hover {
       color: #fff;
       text-decoration: none; }
@@ -583,10 +561,6 @@ p {
   border-right: 0.07143rem solid #ccc;
   background-color: #fff;
   float: left;
-  /*
-  	overflow-x: hidden;
-  	overflow-y: auto;
-  */
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
@@ -712,12 +686,6 @@ p {
       color: #888;
       font-size: 2.28571rem;
       line-height: 2.28571rem; }
-    #profile .profileCloseBtn a:focus .sr-only {
-      width: 2.28571rem;
-      height: auto;
-      font-size: 0.85714rem;
-      top: 1.07143rem;
-      left: -0.42857rem; }
 
 #download_bar {
   width: 100%;
@@ -757,13 +725,6 @@ p {
         -ms-user-select: none;
         -webkit-user-select: none;
         user-select: none; }
-      #download_bar ul li a:focus .sr-only {
-        width: 3.57143rem;
-        height: auto;
-        font-size: 0.71429rem;
-        text-align: left;
-        left: 0;
-        top: -1rem; }
       #download_bar ul li a:hover {
         color: #333;
         border-color: #333;
