replace quiz slide number with an quiz icon
also increase sb+ wrapper by one pixel and JS tweaks to reflect new
quiz icon placement

--- a/sources/css/sbplus_fonts.scss
+++ b/sources/css/sbplus_fonts.scss
@@ -22,8 +22,7 @@
 }
 
 .light {
-    display: inline-block;
-    margin-top: rem( -2px );
+    padding: 0 3px 0 2px;
     @include opacity( .4 );
 }
 
