fixed download bar width

--- a/sources/css/storybookplus.css
+++ b/sources/css/storybookplus.css
@@ -687,7 +687,7 @@ p {
       line-height: 2.28571rem; }
 
 #download_bar {
-  width: 100%;
+  width: 64.28571rem;
   margin: 0.71429rem 0;
   text-align: right;
   float: left;
