--- a/sources/css/storybookplus.css
+++ b/sources/css/storybookplus.css
@@ -113,6 +113,8 @@ p {
   width: 64.35714rem;
   float: left;
   clear: both; }
+  #storybook_plus_wrapper *:focus {
+    outline: 1px dashed #888; }
 
 #storybook_plus_wrapper.withQuiz #note {
   background-color: #fff; }
@@ -213,7 +215,6 @@ p {
   background-color: #fff;
   background-position: left bottom;
   background-repeat: no-repeat;
-  cursor: pointer;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
@@ -687,7 +688,7 @@ p {
       line-height: 2.28571rem; }
 
 #download_bar {
-  width: 100%;
+  width: 64.28571rem;
   margin: 0.71429rem 0;
   text-align: right;
   float: left;
