--- a/sources/css/storybookplus.css
+++ b/sources/css/storybookplus.css
@@ -693,54 +693,51 @@ p {
   text-align: right;
   float: left;
   clear: both; }
-  #download_bar ul {
+  #download_bar .download_item {
     display: inline-block;
-    margin: 0 0 0 2.14286rem;
-    padding: 0;
-    list-style: none; }
-    #download_bar ul li {
-      display: inline-block;
-      margin-left: 0.71429rem; }
-      #download_bar ul li a, #download_bar ul li a:visited {
-        position: relative;
-        display: block;
-        color: #818181;
-        text-decoration: none;
-        padding: 0.35714rem 0.71429rem 0.35714rem 0.57143rem;
-        border: #939393 solid 0.07143rem;
-        background-color: #fdfdfd;
-        -moz-transition-property: color, border, border-color, background-color;
-        -o-transition-property: color, border, border-color, background-color;
-        -webkit-transition-property: color, border, border-color, background-color;
-        transition-property: color, border, border-color, background-color;
-        -moz-transition-duration: 0.3s;
-        -o-transition-duration: 0.3s;
-        -webkit-transition-duration: 0.3s;
-        transition-duration: 0.3s;
-        -moz-transition-timing-function: ease-out;
-        -o-transition-timing-function: ease-out;
-        -webkit-transition-timing-function: ease-out;
-        transition-timing-function: ease-out;
-        -moz-user-select: -moz-none;
-        -ms-user-select: none;
-        -webkit-user-select: none;
-        user-select: none; }
-      #download_bar ul li a:hover {
-        color: #333;
-        border-color: #333;
-        background-color: #FFF;
-        -moz-transition-property: color, border, border-color, background-color;
-        -o-transition-property: color, border, border-color, background-color;
-        -webkit-transition-property: color, border, border-color, background-color;
-        transition-property: color, border, border-color, background-color;
-        -moz-transition-duration: 0.3s;
-        -o-transition-duration: 0.3s;
-        -webkit-transition-duration: 0.3s;
-        transition-duration: 0.3s;
-        -moz-transition-timing-function: ease-in;
-        -o-transition-timing-function: ease-in;
-        -webkit-transition-timing-function: ease-in;
-        transition-timing-function: ease-in; }
+    margin-left: 0.57143rem; }
+    #download_bar .download_item a, #download_bar .download_item a:visited {
+      position: relative;
+      display: block;
+      color: #818181;
+      text-decoration: none;
+      padding: 0.35714rem 0.71429rem 0.35714rem 0.57143rem;
+      border: #939393 solid 0.07143rem;
+      background-color: #fdfdfd;
+      -moz-transition-property: color, border, border-color, background-color;
+      -o-transition-property: color, border, border-color, background-color;
+      -webkit-transition-property: color, border, border-color, background-color;
+      transition-property: color, border, border-color, background-color;
+      -moz-transition-duration: 0.3s;
+      -o-transition-duration: 0.3s;
+      -webkit-transition-duration: 0.3s;
+      transition-duration: 0.3s;
+      -moz-transition-timing-function: ease-out;
+      -o-transition-timing-function: ease-out;
+      -webkit-transition-timing-function: ease-out;
+      transition-timing-function: ease-out;
+      -moz-user-select: -moz-none;
+      -ms-user-select: none;
+      -webkit-user-select: none;
+      user-select: none; }
+    #download_bar .download_item a:hover {
+      color: #333;
+      border-color: #333;
+      background-color: #FFF;
+      -moz-transition-property: color, border, border-color, background-color;
+      -o-transition-property: color, border, border-color, background-color;
+      -webkit-transition-property: color, border, border-color, background-color;
+      transition-property: color, border, border-color, background-color;
+      -moz-transition-duration: 0.3s;
+      -o-transition-duration: 0.3s;
+      -webkit-transition-duration: 0.3s;
+      transition-duration: 0.3s;
+      -moz-transition-timing-function: ease-in;
+      -o-transition-timing-function: ease-in;
+      -webkit-transition-timing-function: ease-in;
+      transition-timing-function: ease-in; }
+  #download_bar .download_item:first-child {
+    margin-left: 0; }
 
 .vjs-default-skin .vjs-fullscreen-control {
   display: none; }
