--- a/sources/css/storybookplus.scss
+++ b/sources/css/storybookplus.scss
@@ -964,44 +964,41 @@ p {
 	text-align: right;
 	@include clear;
 
-	ul {
+	.download_item {
 
-	    display: inline-block;
-    	margin: 0 0 0 rem( 30px );
-    	padding: 0;
-    	list-style: none;
+    	display: inline-block;
+    	margin-left: rem( 8px );
 
-    	li {
+    	a, a:visited {
+        	position: relative;
+        	display: block;
+        	color: #818181;
+        	text-decoration: none;
+        	padding: rem( 5px ) rem( 10px ) rem( 5px ) rem( 8px );
+        	border: #939393 solid rem( 1px );
+        	background-color: #fdfdfd;
+        	@include transition-property( color, border, border-color, background-color );
+        	@include transition-duration( .3s );
+        	@include transition-timing-function( ease-out );
+        	@include user-select( none );
+    	}
 
-        	display: inline-block;
-        	margin-left: rem( 10px );
-
-        	a, a:visited {
-            	position: relative;
-            	display: block;
-            	color: #818181;
-            	text-decoration: none;
-            	padding: rem( 5px ) rem( 10px ) rem( 5px ) rem( 8px );
-            	border: #939393 solid rem( 1px );
-            	background-color: #fdfdfd;
-            	@include transition-property( color, border, border-color, background-color );
-            	@include transition-duration( .3s );
-            	@include transition-timing-function( ease-out );
-            	@include user-select( none );
-        	}
-
-        	a:hover {
-        	    color: #333;
-            	border-color: #333;
-            	background-color: #FFF;
-            	@include transition-property( color, border, border-color, background-color );
-            	@include transition-duration( .3s );
-            	@include transition-timing-function( ease-in );
-            }
-
+    	a:hover {
+    	    color: #333;
+        	border-color: #333;
+        	background-color: #FFF;
+        	@include transition-property( color, border, border-color, background-color );
+        	@include transition-duration( .3s );
+        	@include transition-timing-function( ease-in );
         }
 
-    } // ul
+    }
+    
+    .download_item:first-child {
+
+    	margin-left: 0;
+
+    }
 
 } // #download_bar
 
