--- a/sources/css/storybookplus.scss
+++ b/sources/css/storybookplus.scss
@@ -459,6 +459,7 @@ p {
         left: rem( 1px );
     	width: rem( 640px );
     	height: rem( 360px );
+    	background-color: #000;
     }
     
     #ap {
